ai: complete TASK-017 faceting + validation [TASK-017 GATE 2A]